# ray-tracer-cpp

./: .clang-format  .gitignore  CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  rtweekend.h  sphere.h  vec3.h
